# synaptic-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPARISON.md  CONCEPTS.md  GUIDE.md  PLAN-v0.17-ontology.md  PLAN-v0.18-architecture.md  PLAN-v0.23-reference-linker.md  PLAN-v0.24-relation-enrichment.md  PLAN-v0.25-best-in-class.md  PLAN-v0.5-scale.md  README.md  RELEASE_NOTES_v0.16.0.md  REPORT-rag-vs-synaptic.md  ROADMAP.md  TUTORIAL.en.md  TUTORIAL.md
docs/comparison/: published_numbers.md  synaptic_results.md
docs/launch/: show_hn_draft.md
docs/paper/: README.md  draft.md  references.bib  streaming_rag.tex  theorem.md
docs/paper/figures/: ablation_bar.py  streaming_invariance.py  tier1_benchmark.py
eval/: README.md  build_metacorpus.py  rag_baseline.py  run_all.py  unified.py
eval/baselines/: README.md  qa_latest.json  qa_phase0_agent.json  qa_phase0_embed.json  unified-v0201-baseline.json  unified-v021-with-cross-domain.json  v0.12.0_20260412.json
eval/data/: gt_datasets.xlsx  krra_graph.sqlite-shm
eval/data/profiles/: assort.toml  assort_auto.toml  finreg.toml  krra.toml  krra_auto.toml
eval/data/queries/: _public_sources.json  assort.json  assort_conversational.json  assort_hard.json  cross_domain.json  finreg_multihop.json  krra.json  krra_conversational.json  krra_graph.json  krra_hard.json  krra_multihop.json  x2bee.json  x2bee_conversational.json  x2bee_hard.json
eval/datasets/: build_finreg.py  gen_finreg_queries.py  ingest_finreg.py  link_finreg_references.py
eval/results/: multi_turn_absence.json  multi_turn_complex.json  multi_turn_demo.json  multi_turn_exhaustive.json  multi_turn_version.json
eval/scripts/: export_gt_to_excel.py  extract_entities_krra.py  generate_profile.py  ingest_assort.py  ingest_krra.py  kuzu_parity.py  parse_krra.py  score_assort.py  score_krra.py  score_krra_evidence.py  visualize_graph.py
examples/: benchmark_allganize.py  langchain_retriever.py  mcp_claude_desktop.json  multi_turn_openai.py  multi_turn_openai_assort.py  multi_turn_search.py  quickstart.py
examples/ablation/: diagnose_autorag.py  diagnose_krra_hard_adaptive.py  diagnose_llm_rerank_hyde.py  download_benchmarks.py  failure_diagnostic.py  local_bge.py  run_ablation.py  run_p0_full.sh  run_tier1_benchmarks.py  streaming_experiment.py  sweep_rerank_blend.py
examples/ablation/diagnostics/: allganize_rag_ko_per_query.json  streaming_invariance.json  tier1_20260417_180027.md  tier1_20260417_204128.md  tier1_20260418_161713.md  tier1_20260418_164512.md  tier1_20260418_171121.md  tier1_20260418_172317.md  tier1_20260418_213145.md  tier1_20260418_220413.md  tier1_20260418_225942.md  tier1_20260418_230944.md  tier1_20260418_232154.md
examples/benchmark_vs_competitors/: README.md  finreg_dense_rag.py  finreg_hipporag.py  protocol.py  run_comparison.py
examples/benchmark_vs_competitors/adapters/: __init__.py  base.py  cognee.py  hipporag.py  mem0.py  synaptic.py
examples/data/: products.csv
src/synaptic/: __init__.py  activity.py  agent_loop.py  agent_search.py  agent_tools.py  agent_tools_structured.py  agent_tools_v2.py  consolidation.py  evidence.py  explorer.py  exporter.py  graph.py  hebbian.py  models.py  ontology.py  ppr.py  protocols.py  resonance.py  search.py  search_session.py  snapshot.py  store.py
src/synaptic/backends/: _scoring.py  composite.py  kuzu.py  memory.py  neo4j.py  postgresql.py  qdrant.py  sqlite.py  sqlite_graph.py
src/synaptic/cli/: snapshot.py
src/synaptic/extensions/: calibration.py  chunk_entity_index.py  classifier_hybrid.py  classifier_llm.py  classifier_rules.py  community.py  db_ingester.py  doc_loader.py  document_ingester.py  domain_profile.py  dual_level_search.py  embedder.py  embedder_bge_m3.py  embedder_hyde.py  entity_extractor_hybrid.py  entity_extractor_spacy.py  entity_linker.py  entity_resolver.py  evidence_aggregator.py  evidence_search.py  graph_expander.py  hybrid_reranker.py  llm_provider.py  node_metadata.py  ontology_classifier.py  phrase_extractor.py  phrase_extractor_en.py  phrase_extractor_ko.py  profile_generator.py  query_anchor.py  query_decomposer.py  query_decomposer_llm.py  reference_linker.py  relation_detector.py  relation_detector_llm.py  reranker.py  reranker_colbert.py  reranker_cross.py  reranker_llm.py  structural_reference_linker.py  (+1 more)
src/synaptic/integrations/: __init__.py  langchain.py
src/synaptic/mcp/: __init__.py  server.py
tests/: conftest.py  test_activity.py  test_agent_enumeration_detection.py  test_agent_loop_projection.py  test_agent_search.py  test_agent_tools.py  test_agent_tools_hints.py  test_agent_tools_pagination.py  test_agent_top_nodes.py  test_backend_composite.py  test_backend_kuzu.py  test_backend_memory.py  test_backend_minio.py  test_backend_neo4j.py  test_backend_postgresql.py  test_backend_qdrant.py  test_backend_sqlite.py  test_backend_sqlite_graph.py  test_backfill.py  test_cache.py  test_calibration.py  test_cdc_dialects.py  test_cdc_ids.py  test_cdc_search_regression.py  test_cdc_state.py  test_cdc_sync_delete.py  test_cdc_sync_fk.py  test_cdc_sync_hash.py  test_cdc_sync_timestamp.py  test_chunk_entity_index.py  test_community.py  test_consolidation.py  test_document_ingester.py  test_domain_profile.py  test_entity_linker.py  test_entity_resolver.py  test_eval_domain_coverage.py  test_eval_metacorpus.py  test_eval_unified.py  test_evidence.py  (+37 more)
tests/benchmark/: conftest.py  download_datasets.py  generate_data.py  metrics.py  ontology_mapper.py  session_simulator.py  test_ablation.py  test_e2e_qa.py  test_enterprise_benchmark.py  test_external_datasets.py  test_longmemeval.py
tests/benchmark/data/: allganize_rag_eval.json  allganize_rag_ko.json  autorag_retrieval.json  enterprise_scenario.json  hotpotqa.json  hotpotqa_24.json  publichealthqa_ko.json
tests/qa/: __init__.py  conftest.py  test_edge_cases.py  test_learning_cycle.py  test_performance.py  test_search_quality.py
tests/qa/data/: github_commits.json  (+2 more)
(+5 files in other folders)
