[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synaptic-memory"
version = "0.3.0"
description = "Brain-inspired knowledge graph: spreading activation, Hebbian learning, memory consolidation."
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Son Seongjun" }]
keywords = ["knowledge-graph", "hebbian-learning", "spreading-activation", "memory-consolidation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/PlateerLab/synaptic-memory"
Repository = "https://github.com/PlateerLab/synaptic-memory"
Changelog = "https://github.com/PlateerLab/synaptic-memory/blob/main/CHANGELOG.md"

[project.optional-dependencies]
postgresql = ["asyncpg>=0.30", "pgvector>=0.3"]
sqlite = ["aiosqlite>=0.20"]
all = ["asyncpg>=0.30", "pgvector>=0.3", "aiosqlite>=0.20"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8", "pyright>=1.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/synaptic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: PostgreSQL integration tests (require running PG server)",
    "qa: Quality assurance tests with real external data",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "S", "ASYNC", "PLC", "RUF"]
ignore = ["S101"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
