[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synaptic-memory"
version = "0.13.0"
description = "Knowledge graph + MCP tool server for LLM agents — 3rd-gen retrieval, graph-aware multi-turn exploration, structured data tools, DB→ontology one-liner."
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Son Seongjun" }]
keywords = [
    "knowledge-graph",
    "agent-memory",
    "auto-ontology",
    "hebbian-learning",
    "personalized-pagerank",
    "evidence-chain",
    "memory-consolidation",
    "hybrid-search",
    "ontology",
    "mcp",
    "kuzu",
    "qdrant",
    "cypher",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/PlateerLab/synaptic-memory"
Repository = "https://github.com/PlateerLab/synaptic-memory"
Documentation = "https://github.com/PlateerLab/synaptic-memory/blob/main/README.md"
Changelog = "https://github.com/PlateerLab/synaptic-memory/blob/main/CHANGELOG.md"

[project.scripts]
synaptic-mcp = "synaptic.mcp.server:main"

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20"]
postgresql = ["asyncpg>=0.30", "pgvector>=0.3"]
mysql = ["aiomysql>=0.2"]
oracle = ["oracledb>=2.0"]
mssql = ["aioodbc>=0.5"]
kuzu = ["kuzu>=0.11.0"]
qdrant = ["qdrant-client>=1.12"]
minio = ["miniopy-async>=1.21"]
embedding = ["aiohttp>=3.9"]
spacy = ["spacy>=3.7"]
korean = ["kiwipiepy>=0.20"]
vector = ["usearch>=2.0", "numpy>=1.26"]
reranker = ["flashrank>=0.2"]
rag = ["spacy>=3.7", "aiohttp>=3.9"]
mcp = ["mcp[cli]>=1.5", "aiosqlite>=0.20"]
scale = [
    "kuzu>=0.11.0",
    "qdrant-client>=1.12",
    "miniopy-async>=1.21",
    "aiohttp>=3.9",
]
all = [
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "kuzu>=0.11.0",
    "qdrant-client>=1.12",
    "miniopy-async>=1.21",
    "aiohttp>=3.9",
    "mcp[cli]>=1.5",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
]
eval = [
    "deepeval>=2.0",
    "openai>=1.0",
    "python-dotenv>=1.2.2",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    ".github/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "CLAUDE.md",
    "pyproject.toml",
    "docker-compose.yml",
]
exclude = [
    "tests/benchmark/data/",
    "tests/qa/data/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synaptic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: PostgreSQL integration tests (require running PG server)",
    "kuzu: Kuzu embedded backend tests (require kuzu installed)",
    "qdrant: Qdrant integration tests (require running Qdrant server)",
    "minio: MinIO integration tests (require running MinIO server)",
    "composite: Composite backend integration tests (require Kuzu + Qdrant + MinIO)",
    "qa: Quality assurance tests with real external data",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "S", "ASYNC", "PLC", "RUF"]
ignore = ["S101", "E501", "PLC0415", "S110", "S311", "S106", "RUF005", "F841", "B007", "B905", "RUF059", "E402", "N814", "S324", "RUF002", "RUF003", "RUF022", "RUF034", "E741", "N806", "S608", "A002"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
